# RabbitMQCppConnector

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
CMakeModules/: CTags.cmake
examples/: CMakeLists.txt  basic_consumer.cpp  basic_publisher.cpp
src/: CMakeLists.txt
src/ideup/amqp/: AMQP.cpp  AMQP.hpp  Base.cpp  Base.hpp  Channel.cpp  Channel.hpp  Connection.cpp  Connection.hpp  ConnectionFactory.h  ConnectionFactory.hpp  Exception.cpp  Exception.hpp  Exchange.cpp  Exchange.hpp  Message.cpp  Message.hpp  Observer.cpp  Observer.hpp  Queue.cpp  Queue.hpp  Subject.cpp  Subject.hpp  common.hpp
